--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
+
+# Remove Jolt dependency from Repo
 addons/godot-jolt/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
